--- a/imageryindex/django/oamcatalog/main/templates/image.html
+++ b/imageryindex/django/oamcatalog/main/templates/image.html
@@ -4,6 +4,6 @@
  <li>URL: <a href="{{image.url}}">URL</a></li>
  <li>Image Size: {{image.width}} x {{image.height}}</li>
  <li>License: <a href="/license/{{image.license.id}}/">{{image.license.name}}</a></li>
- <li>BBOX: {{ image.bbox}}</li>
+ <li>BBOX: {{ image.bbox.extent }}</li>
 </ul> 
 {% endblock %}
