--- a/imageryindex/django/oamcatalog/main/templates/image.html
+++ b/imageryindex/django/oamcatalog/main/templates/image.html
@@ -5,5 +5,6 @@
  <li>Image Size: {{image.width}} x {{image.height}}</li>
  <li>License: <a href="/license/{{image.license.id}}/">{{image.license.name}}</a></li>
  <li>BBOX: {{ image.bbox.extent }}</li>
+ <li><a href="/image/{{image.id}}/thumb.jpg">Thumbnail</a></li>
 </ul> 
 {% endblock %}
