--- a/imageryindex/django/oamcatalog/main/templates/image.html
+++ b/imageryindex/django/oamcatalog/main/templates/image.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<p><a href="/image/{{image.id}}/preview.jpg"><img src="/image/{{image.id}}/preview.jpg"></a></p>
+<p><a href="/image/{{image.id}}/large.jpg"><img src="/image/{{image.id}}/preview.jpg"></a></p>
 <ul>
  <li>URL: <a href="{{image.url}}">URL</a></li>
  <li>Image Size: {{image.width}} x {{image.height}}</li>
