--- a/imageryindex/django/oamcatalog/main/templates/home.html
+++ b/imageryindex/django/oamcatalog/main/templates/home.html
@@ -2,12 +2,21 @@
 {% block title %}Home{% endblock %}
 {% block content %}
   <h3>Recently Uploaded Images</h3>
-  <ul>
+  <ul class="image-pile">
   {% for image in images %}
-    <li>
-        <a href="/image/{{image.id}}/">{{image.id}}</a>
-        <br>
-        <a href="/image/{{image.id}}/"><img src="/image/{{image.id}}/thumbnail.jpg" width="{{ image.thumb_size.0 }}" height="{{ image.thumb_size.1 }}"></a>
+    <li class="{{image.columns}}">
+        <p>
+            <a href="/image/{{image.id}}/" style="width: {{image.thumb_size.0}}px; height:{{image.thumb_size.1}}px;"><img src="/image/{{image.id}}/thumbnail.jpg" width="{{image.thumb_size.0}}" height="{{image.thumb_size.1}}"></a>
+        </p>
+        <p>
+            <strong><a href="/image/{{image.id}}/">{{image.id}}</a></strong>,
+            <a href="/license/{{image.image.license.id}}/">{{image.image.license.name}}</a>
+            <br>
+            <small>
+                {{image.image.bbox.centroid.1|floatformat:4}}, {{image.image.bbox.centroid.0|floatformat:4}}
+                (<a href="http://www.openstreetmap.org/?lat={{image.image.bbox.centroid.1|floatformat:4}}&amp;lon={{image.image.bbox.centroid.0|floatformat:4}}&amp;zoom=11&amp;layers=M">map</a>)
+            </small>
+        </p>
     </li>
   {% endfor %}
   </ul>
