Create a layer browser UI; search + paging through lists of layers.

--- a/imageryindex/django/oamcatalog/main/templates/base.html
+++ b/imageryindex/django/oamcatalog/main/templates/base.html
@@ -8,6 +8,7 @@
    <h1><a href="/">{% block heading %}OpenAerialMap{% endblock %}</a></h1>
  </div>
  <div id="mainnav" class="nav">
+ <a href="/layer/">Browse Layers</a>
  </div>
  <div id="main">
  {% block content %}
