--- a/imageryindex/django/oamcatalog/static/website.css
+++ b/imageryindex/django/oamcatalog/static/website.css
@@ -6,9 +6,8 @@ font-family: Georgia, Minion, LucidaBright, Palatino, serif;
 background: rgb(233,238,249);
 border: none;
 border-bottom: 1px solid #d7d7d7;
- margin: .66em 0 .33em;
- padding: .2em 0;
- height: 10px;
+ margin: .66em 0 .34em;
+ padding: .2em 2em;
 margin-top: 0px;
 }
 
