--- a/imageryindex/django/oamcatalog/main/templates/layer.html
+++ b/imageryindex/django/oamcatalog/main/templates/layer.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}{{layer.name}}{% endblock %}
 {% block content %}
 <div style="float:right">
 {% if prev %} 
