--- a/imageryindex/django/oamcatalog/main/templates/base.html
+++ b/imageryindex/django/oamcatalog/main/templates/base.html
@@ -2,7 +2,9 @@
  <head>
    <title>{% block title %}Untitled Page{% endblock %} &#x2014; OpenAerialMap</title>
    <link rel="stylesheet" href="/static/website.css" type="text/css" />
+   <script src="http://openlayers.org/api/2.11-rc1/OpenLayers.js"></script>
    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+   <script type="text/javascript" src="/static/js/map.js"></script>
    <script type="text/javascript" src="/static/js/jquery.inlineedit.js"></script>
    <script type="text/javascript" src="/static/js/jquery.json-2.2.min.js"></script>
  </head>
