Adding a view to allow the creation of layers via the web UI; images still have to come in via the API.

--- a/imageryindex/django/oamcatalog/main/templates/base.html
+++ b/imageryindex/django/oamcatalog/main/templates/base.html
@@ -14,6 +14,7 @@
  </div>
  <div id="mainnav" class="nav">
  <a href="/layer/">Browse Layers</a>
+ <a href="/layer/new/">Create New Layer</a>
   {% if not user.is_anonymous %}
    <div id="user">Logged in as {{user}} | <a href="/accounts/logout/">Logout</a></div>
   {% else %}
