Add the ability to add and remove images from layers via the web UI, using fancy jQuery autocomplete magic; includes:  1. Updated /api/image/$id/layer/$id/ method: POST or DELETE to add     or remove an image to/from a layer.  2. jquery ui custom build with autocomplete  3. Updated /api/layer API including ?q= for search purposes.

--- a/imageryindex/django/oamcatalog/main/templates/base.html
+++ b/imageryindex/django/oamcatalog/main/templates/base.html
@@ -7,6 +7,9 @@
    <script type="text/javascript" src="/static/js/map.js"></script>
    <script type="text/javascript" src="/static/js/jquery.inlineedit.js"></script>
    <script type="text/javascript" src="/static/js/jquery.json-2.2.min.js"></script>
+   <link type="text/css" href="/static/jq/css/ui-lightness/jquery-ui-1.8.13.custom.css" rel="stylesheet" />   
+   <script type="text/javascript" src="/static/jq/jquery-ui-1.8.13.custom.min.js"></script>
+   {% block extrahead %}{% endblock %}
  </head>
  <body>
  <div id="header">
