--- a/imageryindex/django/oamcatalog/main/templates/layer.html
+++ b/imageryindex/django/oamcatalog/main/templates/layer.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 {% block title %}{{layer.name}}{% endblock %}
+{% block extrahead %}
+<script>
+function start() { createMap("/api/image/?layer={{layer.id}}&limit=500", document.getElementById("map") ); }
+</script>
+{% endblock %}
+{% block onload %} onload="start();"{% endblock %}
 {% block content %}
 <style type="text/css">
     .ui-state-hover { background-color: #ffC }
@@ -34,7 +40,6 @@ $(function(){
         }
     });
 });   
-document.body.onload = function() { createMap('/api/image/?layer={{layer.id}}&limit=500', document.getElementById("map")); }
 </script>    
 <div style="float:right">
 {% if prev %} 
